--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "php-http/client-common": "^1"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4"
+    "phpunit/phpunit": "~4",
+    "symfony/event-dispatcher": "^3.4 || ^4.0"
   },
   "conflict": {
     "php-http/message-factory": "<1.0.2"
